<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonInfo">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/order_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:navigationIcon="?attr/homeAsUpIndicator"/>



    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/date_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginStart="15dp"
        android:textSize="24sp"
        android:text="Введите Вашу личную информацию"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:id="@+id/linearLayout1">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/input_prompts"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameInput"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/numberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:text="@string/_375"
            app:met_mask="+375 (##) ### ## ##"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:text="@string/submit"/>

    </LinearLayout>

</RelativeLayout>