<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderProcessed">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="238dp"
        android:layout_height="333dp"
        android:layout_marginTop="125dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/clipart289596"
        android:contentDescription="@string/successful" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="440dp"
        android:text="@string/order"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12pt" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/back_to_start" />

</RelativeLayout>