<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">


        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/museum_logo"
            android:src="@drawable/museum_logo11" />

    </LinearLayout>
    <Button
        android:id="@+id/button1"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:onClick="onClick"
        android:text="@string/go_to_the_order"
        android:background="@color/Button1"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/button2"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="610dp"
        android:onClick="onClick"
        android:text="@string/import_order"
        android:background="@color/Button2"
        android:textColor="@android:color/white"
        />




</RelativeLayout>
