<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TicketsPage">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/order_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:navigationIcon="?attr/homeAsUpIndicator"/>

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/selectExcType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Тип экскурсии"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorPrimaryDark"/>

    <Spinner
        android:id="@+id/spinExcursionType"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_below="@+id/selectExcType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/selectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Дата и время"
        android:layout_below="@+id/spinExcursionType"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorPrimaryDark"/>

    <Spinner
        android:id="@+id/spinExcursionDate"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_below="@+id/selectDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/selectGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Экскурсовод"
        android:layout_below="@+id/spinExcursionDate"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorPrimaryDark"/>

    <Spinner
        android:id="@+id/spinExcursionGuide"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_below="@+id/selectGuide"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/selectPersonNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Количество человек"
        android:layout_below="@+id/spinExcursionGuide"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorPrimaryDark"/>

    <Spinner
        android:id="@+id/spinPersonNum"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_below="@+id/selectPersonNum"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Введите персональные данные:"
        android:layout_below="@+id/spinPersonNum"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/nameInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_below="@+id/person"
        android:autofillHints="" />

    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/numberInput"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_below="@+id/nameInput"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        android:text="@string/_375"
        app:met_mask="+375 (##) ### ## ##"/>

    <Button
        android:id="@+id/addButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:layout_below="@+id/numberInput"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>